update link titles

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -12,12 +12,11 @@
     <meta name="copyright" content="Ben Ramsey">
     <link rel="license" type="application/rdf+xml" href="https://creativecommons.org/licenses/by/4.0/rdf" title="Creative Commons Attribution 4.0 International License">
 
-    <link rel="canonical" href="https://ben.ramsey.dev">
-
-    <link rel="me" href="https://github.com/ramsey">
-    <link rel="me" href="https://phpc.social/@ramsey">
-    <link rel="me" href="https://speakerdeck.com/ramsey">
-    <link rel="me" href="https://www.linkedin.com/in/benramsey">
+    <link rel="canonical" href="https://ben.ramsey.dev" title="Visit my website">
+    <link rel="me" href="https://github.com/ramsey" title="Check out my open source projects on GitHub">
+    <link rel="me" href="https://phpc.social/@ramsey" title="Follow me in the Fediverse">
+    <link rel="me" href="https://speakerdeck.com/ramsey" title="View my presentation slides on Speaker Deck">
+    <link rel="me" href="https://www.linkedin.com/in/benramsey" title="Connect with me on LinkedIn">
 {% endblock %}
 
 {% block body %}
@@ -28,14 +27,14 @@
                 <h2 aria-label="Coder, author, &amp; speaker"><span aria-hidden="true"><span class="descriptor p-category">Coder</span><span class="sr">, </span><span class="descriptor p-category">author</span><span class="sr">, &amp; </span><span class="descriptor p-category">speaker</span></span></h2>
             </hgroup>
             <nav aria-labelledby="contact">
-                <p id="contact" class="sr" aria-hidden="true">You may follow or contact me online at</p>
+                <p id="contact" class="sr" aria-hidden="true">Let's keep in touch!</p>
                 <ul>
-                    <li><a href="https://ben.ramsey.dev" rel="me" class="u-url u-uid" aria-labelledby="contact-web"><span class="icon home" aria-hidden="true"></span><span class="sr" id="contact-web">My website<span class="pr">: https://ben.ramsey.dev</span></span></a></li>
-                    <li><a href="https://phpc.social/@ramsey" rel="me" class="u-url" aria-labelledby="contact-mastodon"><span class="icon mastodon" aria-hidden="true"></span><span class="sr" id="contact-mastodon">Mastodon<span class="pr">: https://phpc.social/@ramsey</span></span></a></li>
-                    <li><a href="https://github.com/ramsey" rel="me" class="u-url" aria-labelledby="contact-github"><span class="icon github" aria-hidden="true"></span><span class="sr" id="contact-github">GitHub<span class="pr">: https://github.com/ramsey</span></span></a></li>
-                    <li><a href="https://speakerdeck.com/ramsey" rel="me" class="u-url" aria-labelledby="contact-speaker-deck"><span class="icon speaker-deck" aria-hidden="true"></span><span class="sr" id="contact-speaker-deck">Speaker Deck<span class="pr">: https://speakerdeck.com/ramsey</span></span></a></li>
-                    <li><a href="https://www.linkedin.com/in/benramsey/" rel="me" class="u-url" aria-labelledby="contact-linkedin"><span class="icon linkedin" aria-hidden="true"></span><span class="sr" id="contact-linkedin">Linked In<span class="pr">: https://www.linkedin.com/in/benramsey/</span></span></a></li>
-                    <li><!--email_off--><a href="mailto:ben@ramsey.dev" class="u-email" aria-labelledby="contact-email"><span class="icon paper-plane" aria-hidden="true"></span><span class="sr" id="contact-email">Email<span class="pr">: ben@ramsey.dev</span></span></a><!--/email_off--></li>
+                    <li><a href="https://ben.ramsey.dev" rel="me" class="u-url u-uid" aria-labelledby="contact-web"><span class="icon home" aria-hidden="true"></span><span class="sr" id="contact-web">Visit my website<span class="pr">: https://ben.ramsey.dev</span></span></a></li>
+                    <li><a href="https://phpc.social/@ramsey" rel="me" class="u-url" aria-labelledby="contact-mastodon"><span class="icon mastodon" aria-hidden="true"></span><span class="sr" id="contact-mastodon">Follow me in the Fediverse<span class="pr">: https://phpc.social/@ramsey</span></span></a></li>
+                    <li><a href="https://github.com/ramsey" rel="me" class="u-url" aria-labelledby="contact-github"><span class="icon github" aria-hidden="true"></span><span class="sr" id="contact-github">Check out my open source projects on GitHub<span class="pr">: https://github.com/ramsey</span></span></a></li>
+                    <li><a href="https://speakerdeck.com/ramsey" rel="me" class="u-url" aria-labelledby="contact-speaker-deck"><span class="icon speaker-deck" aria-hidden="true"></span><span class="sr" id="contact-speaker-deck">View my presentation slides on Speaker Deck<span class="pr">: https://speakerdeck.com/ramsey</span></span></a></li>
+                    <li><a href="https://www.linkedin.com/in/benramsey/" rel="me" class="u-url" aria-labelledby="contact-linkedin"><span class="icon linkedin" aria-hidden="true"></span><span class="sr" id="contact-linkedin">Connect with me on LinkedIn<span class="pr">: https://www.linkedin.com/in/benramsey/</span></span></a></li>
+                    <li><!--email_off--><a href="mailto:ben@ramsey.dev" class="u-email" aria-labelledby="contact-email"><span class="icon paper-plane" aria-hidden="true"></span><span class="sr" id="contact-email">Email me<span class="pr">: ben@ramsey.dev</span></span></a><!--/email_off--></li>
                 </ul>
             </nav>
         </header>
