--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -11,12 +11,7 @@
     <meta name="author" content="Ben Ramsey">
     <meta name="copyright" content="Ben Ramsey">
     <link rel="license" type="application/rdf+xml" href="https://creativecommons.org/licenses/by/4.0/rdf" title="Creative Commons Attribution 4.0 International License">
-
-    <link rel="canonical" href="https://ben.ramsey.dev" title="Visit my website">
-    <link rel="me" href="https://github.com/ramsey" title="Check out my open source projects on GitHub">
-    <link rel="me" href="https://phpc.social/@ramsey" title="Follow me in the Fediverse">
-    <link rel="me" href="https://speakerdeck.com/ramsey" title="View my presentation slides on Speaker Deck">
-    <link rel="me" href="https://www.linkedin.com/in/benramsey" title="Connect with me on LinkedIn">
+    <link rel="canonical" href="https://ben.ramsey.dev">
 {% endblock %}
 
 {% block body %}
@@ -27,7 +22,7 @@
                 <h2 aria-label="Coder, author, &amp; speaker"><span aria-hidden="true"><span class="descriptor p-category">Coder</span><span class="sr">, </span><span class="descriptor p-category">author</span><span class="sr">, &amp; </span><span class="descriptor p-category">speaker</span></span></h2>
             </hgroup>
             <nav aria-labelledby="contact">
-                <p id="contact" class="sr" aria-hidden="true">Let's keep in touch!</p>
+                <p id="contact" class="pr" aria-hidden="true">Let&rsquo;s keep in touch!</p>
                 <ul>
                     <li><a href="https://ben.ramsey.dev" rel="me" class="u-url u-uid" aria-labelledby="contact-web"><span class="icon home" aria-hidden="true"></span><span class="sr" id="contact-web">Visit my website<span class="pr">: https://ben.ramsey.dev</span></span></a></li>
                     <li><a href="https://phpc.social/@ramsey" rel="me" class="u-url" aria-labelledby="contact-mastodon"><span class="icon mastodon" aria-hidden="true"></span><span class="sr" id="contact-mastodon">Follow me in the Fediverse<span class="pr">: https://phpc.social/@ramsey</span></span></a></li>
@@ -40,8 +35,12 @@
         </header>
         <main>
             <div class="bio p-note">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lectus quam id leo in vitae. Eget nunc scelerisque viverra mauris. Id neque aliquam vestibulum morbi blandit cursus. Urna cursus eget nunc scelerisque viverra. Eu turpis egestas pretium aenean pharetra. Libero justo laoreet sit amet. Aliquam vestibulum morbi blandit cursus. Aliquam sem fringilla ut morbi tincidunt augue interdum velit. Adipiscing at in tellus integer feugiat. Dolor sed viverra ipsum nunc aliquet.</p>
-                <p>Nulla aliquet porttitor lacus luctus accumsan tortor. A cras semper auctor neque vitae tempus quam pellentesque nec. Donec ac odio tempor orci. In nibh mauris cursus mattis molestie a iaculis. Pharetra vel turpis nunc eget lorem dolor sed viverra ipsum. Bibendum ut tristique et egestas quis ipsum suspendisse. Non pulvinar neque laoreet suspendisse interdum consectetur libero. Sit amet nisl purus in mollis nunc.</p>
+                <p>I love writing software. You might say I&rsquo;m passionate about it, but I&rsquo;m quick to point out that passion is not a defining characteristic of great programmers. Great programmers understand software and how we create it is not the central concern of computing; <a href="https://ethics.acm.org/code-of-ethics/#h-3.1-ensure-that-the-public-good-is-the-central-concern-during-all-professional-computing-work.">people are</a>.</p>
+                <p>For more than 25 years, I&rsquo;ve dedicated myself to creating people-oriented software, software that solves real-world problems and strives to make the lives of those who use it a little better. From empowering folks to turn their hobbies into careers to enabling users to learn new skills and tap into their creativity, I&rsquo;ve worked on a wide range of products and have had the privilege of working with and learning from some of the greatest people in the industry. <a href="https://www.linkedin.com/in/benramsey/">My LinkedIn profile</a> lists the companies I&rsquo;ve worked with.</p>
+                <p>Since the early days of my career, I&rsquo;ve been involved in open source software. While far from perfect, there are some amazing people working within various open source communities to bring a more empathetic, people-centric focus to the way we create software. I contribute to open source because of the people and relationships I&rsquo;ve forged in these communities. Some of the projects I work on are: the <a href="https://www.php.net">PHP programming language</a> (as a release manager for versions 8.1 and 8.2), <a href="https://github.com/ramsey/uuid">ramsey/uuid</a>, and <a href="https://github.com/php-ecma-intl/ext">pecl/ecma_intl</a>. Check out <a href="https://github.com/ramsey">my GitHub profile</a> for more.</p>
+                <p>I like sharing what I&rsquo;ve learned. I&rsquo;ve spoken at many conferences, including OSCON, ZendCon, and php[tek]. I&rsquo;ve published a number of magazine articles, and I&rsquo;ve contributed to a few books. I stand on the shoulders of many giants, and this is part of how I pass along my knowledge, just as others have passed theirs on to me. Slides for all of my presentations are on <a href="https://speakerdeck.com/ramsey">my Speaker Deck profile</a>.</p>
+                <p>If you&rsquo;d like to get in touch, you may reach me by <a href="mailto:ben@ramsey.dev">email</a>, follow me in the Fediverse (on Mastodon) at <a href="https://phpc.social/@ramsey">@ramsey@phpc.social</a>, or chat with me on IRC (<a href="https://libera.chat">Libera</a>) or <a href="https://matrix.org">Matrix</a>, where I&rsquo;m <strong>ramsey</strong> and <strong>@ramsey:matrix.org</strong>, respectively.</p>
+                <p>When not writing software, I hang out in Nashville with my family. I also play TTRPGs and video games. I love to play chess, but I&rsquo;m awful. Craft beer and rye whiskey are my drinks of choice.</p>
             </div>
         </main>
         <footer>
