add about and copyright pages, including new fonts

--- a/assets/styles/_colors.scss
+++ b/assets/styles/_colors.scss
@@ -25,6 +25,7 @@
   --color-background-grad1: var(--purple-dark);
   --color-background-grad2: var(--purple-black);
   --color-background: var(--purple-black);
+  --color-bold: var(--yellow);
   --color-icon-base: var(--gray-light);
   --color-icon-hover: var(--yellow);
   --color-link: var(--cyan);
