--- a/assets/styles/_fonts.scss
+++ b/assets/styles/_fonts.scss
@@ -13,6 +13,132 @@
 }
 
 @font-face {
+  font-family: "Saira";
+  font-style: normal;
+  font-weight: 100;
+  src: url("../fonts/Saira/Saira-Thin.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Saira";
+  font-style: italic;
+  font-weight: 100;
+  src: url("../fonts/Saira/Saira-ThinItalic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Saira";
+  font-style: normal;
+  font-weight: 200;
+  src: url("../fonts/Saira/Saira-ExtraLight.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Saira";
+  font-style: italic;
+  font-weight: 200;
+  src: url("../fonts/Saira/Saira-ExtraLightItalic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Saira";
+  font-style: normal;
+  font-weight: 300;
+  src: url("../fonts/Saira/Saira-Light.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Saira";
+  font-style: italic;
+  font-weight: 300;
+  src: url("../fonts/Saira/Saira-LightItalic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Saira";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/Saira/Saira-Regular.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Saira";
+  font-style: italic;
+  font-weight: 400;
+  src: url("../fonts/Saira/Saira-Italic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Saira";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../fonts/Saira/Saira-Medium.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Saira";
+  font-style: italic;
+  font-weight: 500;
+  src: url("../fonts/Saira/Saira-MediumItalic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Saira";
+  font-style: normal;
+  font-weight: 600;
+  src: url("../fonts/Saira/Saira-SemiBold.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Saira";
+  font-style: italic;
+  font-weight: 600;
+  src: url("../fonts/Saira/Saira-SemiBoldItalic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Saira";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/Saira/Saira-Bold.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Saira";
+  font-style: italic;
+  font-weight: 700;
+  src: url("../fonts/Saira/Saira-BoldItalic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Saira";
+  font-style: normal;
+  font-weight: 800;
+  src: url("../fonts/Saira/Saira-ExtraBold.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Saira";
+  font-style: italic;
+  font-weight: 800;
+  src: url("../fonts/Saira/Saira-ExtraBoldItalic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Saira";
+  font-style: normal;
+  font-weight: 900;
+  src: url("../fonts/Saira/Saira-Black.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Saira";
+  font-style: italic;
+  font-weight: 900;
+  src: url("../fonts/Saira/Saira-BlackItalic.woff2") format("woff2");
+}
+
+@font-face {
   font-family: "Urbanist";
   font-style: normal;
   font-weight: 100;
