include microformats h-card markup

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -21,7 +21,7 @@
             <nav aria-labelledby="contact">
                 <p id="contact" class="pr" aria-hidden="true">Let&rsquo;s keep in touch!</p>
                 <ul>
-                    <li><a href="https://ben.ramsey.dev" rel="me" class="u-url u-uid" aria-labelledby="contact-web"><span class="icon home" aria-hidden="true"></span><span class="sr" id="contact-web">Visit my website</span></a><span class="pr">: https://ben.ramsey.dev</span></li>
+                    <li><a href="https://ben.ramsey.dev/" rel="me" class="u-url u-uid" aria-labelledby="contact-web"><span class="icon home" aria-hidden="true"></span><span class="sr" id="contact-web">Visit my website</span></a><span class="pr">: https://ben.ramsey.dev</span></li>
                     <li><a href="https://phpc.social/@ramsey" rel="me" class="u-url" aria-labelledby="contact-mastodon"><span class="icon mastodon" aria-hidden="true"></span><span class="sr" id="contact-mastodon">Follow me in the Fediverse</span></a><span class="pr">: https://phpc.social/@ramsey</span></li>
                     <li><a href="https://github.com/ramsey" rel="me" class="u-url" aria-labelledby="contact-github"><span class="icon github" aria-hidden="true"></span><span class="sr" id="contact-github">Check out my open source projects on GitHub</span></a><span class="pr">: https://github.com/ramsey</span></li>
                     <li><a href="https://speakerdeck.com/ramsey" rel="me" class="u-url" aria-labelledby="contact-speaker-deck"><span class="icon speaker-deck" aria-hidden="true"></span><span class="sr" id="contact-speaker-deck">View my presentation slides on Speaker Deck</span></a><span class="pr">: https://speakerdeck.com/ramsey</span></li>
