--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -15,8 +15,8 @@
     <div id="container" class="h-card">
         <header>
             <hgroup>
-                <h1 aria-label="Ben Ramsey" class="p-name"><span aria-hidden="true"><span class="ben p-given-name"><span class="b">B</span><span class="e">e</span><span class="n">n</span></span> <span class="ramsey p-family-name"><span class="ram"><span class="r">R</span><span class="a">a</span><span class="m">m</span></span><span class="sey"><span class="s">s</span><span class="e">e</span><span class="y">y</span></span></span></span></h1>
-                <p aria-label="Coder, author, &amp; speaker"><span aria-hidden="true"><span class="descriptor p-category">Coder</span><span class="sr">, </span><span class="descriptor p-category">author</span><span class="sr">, &amp; </span><span class="descriptor p-category">speaker</span></span></p>
+                <h1 aria-label="Ben Ramsey: Coder, author, &amp; speaker" class="p-name"><span aria-hidden="true"><span class="ben p-given-name"><span class="b">B</span><span class="e">e</span><span class="n">n</span></span> <span class="ramsey p-family-name"><span class="ram"><span class="r">R</span><span class="a">a</span><span class="m">m</span></span><span class="sey"><span class="s">s</span><span class="e">e</span><span class="y">y</span></span></span></span></h1>
+                <p aria-hidden="true"><span class="descriptor p-category">Coder</span><span class="sr">, </span><span class="descriptor p-category">author</span><span class="sr">, &amp; </span><span class="descriptor p-category">speaker</span></p>
             </hgroup>
             <nav aria-labelledby="contact">
                 <p id="contact" class="pr" aria-hidden="true">Let&rsquo;s keep in touch!</p>
