use a better "not found" error page

--- a/templates/error/not-found.html.twig
+++ b/templates/error/not-found.html.twig
@@ -2,10 +2,10 @@
 
 {%  set pageClass = 'error' %}
 
-{% block title %}Gone{% endblock %}
+{% block title %}Not Found{% endblock %}
 
 {% block body %}
     <div id="container">
-        <h1>Gone</h1>
+        <h1>Not Found</h1>
     </div>
 {% endblock %}
