feat: use Sass to create a basic site design

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,3 +1,7 @@
-body {
-    background-color: skyblue;
-}
+@use 'fonts';
+@use 'colors';
+@use 'icons';
+
+@use 'pages/base';
+@use 'pages/home';
+@use 'pages/page';
