feat: use link headers and preloading for CSS

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
         <link rel="icon" href="data:image/svg+xml,%3Csvg%20width%3D%22100%25%22%20height%3D%22100%25%22%20viewBox%3D%220%200%20266%20156%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xml%3Aspace%3D%22preserve%22%20style%3D%22fill%3A%20fuchsia%3B%20fill-rule%3A%20evenodd%3B%20clip-rule%3A%20evenodd%3B%20stroke-linejoin%3A%20round%3B%20stroke-miterlimit%3A%202%3B%22%3E%3Cpath%20d%3D%22M48.789%2C0L205.391%2C0C217.164%2C0%20227.227%2C2.147%20235.579%2C6.441C243.932%2C10.735%20250.216%2C16.536%20254.432%2C23.843C258.648%2C31.15%20260.756%2C39.098%20260.756%2C47.686C260.756%2C57.178%20258.051%2C65.766%20252.642%2C73.45C247.233%2C81.134%20239.358%2C86.784%20229.017%2C90.4L265.529%2C155.488L206.346%2C155.488L177.231%2C98.762L157.663%2C98.762L157.663%2C155.488L47.368%2C155.488C38.684%2C155.488%2030.71%2C153.755%2023.447%2C150.29C16.184%2C146.825%2010.46%2C141.966%206.276%2C135.713C2.092%2C129.46%200%2C122.266%200%2C114.13C0%2C92.735%2010.342%2C79.778%2031.026%2C75.258L31.026%2C74.354C12.868%2C69.382%203.789%2C57.329%203.789%2C38.194C3.789%2C30.962%205.803%2C24.408%209.829%2C18.532C13.855%2C12.656%2019.302%2C8.098%2026.171%2C4.859C33.039%2C1.62%2040.578%2C0%2048.789%2C0ZM104.92%2C119.328L65.131%2C119.328C61.657%2C119.328%2058.776%2C118.16%2056.486%2C115.825C54.197%2C113.49%2053.052%2C110.589%2053.052%2C107.124L53.052%2C104.864C53.052%2C101.399%2054.197%2C98.498%2056.486%2C96.163C58.776%2C93.828%2061.657%2C92.66%2065.131%2C92.66L104.92%2C92.66L104.92%2C119.328ZM207.062%2C49.72C207.062%2C45.652%20205.63%2C42.262%20202.766%2C39.55C199.902%2C36.838%20196.402%2C35.482%20192.266%2C35.482L157.663%2C35.482L157.663%2C64.184L192.266%2C64.184C196.402%2C64.184%20199.902%2C62.79%20202.766%2C60.003C205.63%2C57.216%20207.062%2C53.788%20207.062%2C49.72ZM104.92%2C60.568L68.92%2C60.568C65.447%2C60.568%2062.565%2C59.4%2060.276%2C57.065C57.986%2C54.73%2056.841%2C51.829%2056.841%2C48.364L56.841%2C46.104C56.841%2C42.789%2058.026%2C39.964%2060.394%2C37.629C62.762%2C35.294%2065.604%2C34.126%2068.92%2C34.126L104.92%2C34.126L104.92%2C60.568Z%22%2F%3E%3C%2Fsvg%3E">
         <link rel="mask-icon" href="{{ asset('media/svg/br.svg') }}" color="fuchsia">
 
-        <link rel="alternate" type="application/atom+xml" title="Ben Ramsey: Atom Feed" href="{{ asset('feeds/blog.xml') }}">
+        <link rel="alternate" type="application/atom+xml" title="Ben Ramsey: Atom Feed" href="{{ link(asset('feeds/blog.xml'), 'alternate') }}">
 
         <meta name="author" content="Ben Ramsey">
         <meta name="copyright" content="Ben Ramsey">
@@ -32,6 +32,8 @@
         {% block head %}
             <meta name="keywords" content="Ben Ramsey,PHP,open source,coding,coder,author,writer,speaker,web development,web developer">
         {% endblock %}
+
+        <link rel="preload" href="{{ preload(asset('styles/app.scss'), { as: 'style', importance: 'high' }) }}">
 
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('styles/app.scss') }}">
