fix: convert KeybaseController to an invokable

--- a/templates/copyright.html.twig
+++ b/templates/copyright.html.twig
@@ -1,6 +1,6 @@
 {% extends 'page.html.twig' %}
 
-{% set pageClass = 'about' %}
+{% set pageClass = 'copyright' %}
 
 {% block title %}Copyright Notice{% endblock %}
 
