feat: migrate /purpose page content

--- a/templates/about.html.twig
+++ b/templates/about.html.twig
@@ -1,6 +1,6 @@
 {% extends 'page.html.twig' %}
 
-{% set pageClass = 'about' %}
+{% set pageClass = 'about h-card' %}
 
 {% block title %}About Me{% endblock %}
 
