chore: change web developer to software engineer

--- a/templates/purpose/purpose.html.twig
+++ b/templates/purpose/purpose.html.twig
@@ -12,7 +12,7 @@
         people and cultures we never knew existed. Yet, with all its good, it can also be used to tear people down,
         to hurt, vilify, and bully them, to further perpetuate harmful ideologies like fascism, racism, and
         classism.</p>
-    <p><strong>I choose to be an instrument for good</strong>, using my skills as a web developer to build a better
+    <p><strong>I choose to be an instrument for good</strong>, using my skills as a software engineer to build a better
         world for my child, nieces and nephews, and their children. I want to build products that enrich the lives
         of others, helping to grow their businesses, expand their knowledge and understanding of the universe,
         increase their freedoms, and connect them to family, friends, and the rest of the world. It is through
