--- a/templates/purpose/purpose.html.twig
+++ b/templates/purpose/purpose.html.twig
@@ -5,21 +5,23 @@
 {% block title %}Purpose{% endblock %}
 
 {% block content %}
-    <h1>Purpose</h1>
-    <p><strong>I believe the Web has the power to change and shape the world</strong> we live in for good or evil.
-        It has the power to create new communities and new economies. It can destroy old barriers and topple regimes.
-        It brings us closer to our family and friends, and it makes the world a lot smaller by connecting us to
-        people and cultures we never knew existed. Yet, with all its good, it can also be used to tear people down,
-        to hurt, vilify, and bully them, to further perpetuate harmful ideologies like fascism, racism, and
-        classism.</p>
-    <p><strong>I choose to be an instrument for good</strong>, using my skills as a software engineer to build a better
-        world for my child, nieces and nephews, and their children. I want to build products that enrich the lives
-        of others, helping to grow their businesses, expand their knowledge and understanding of the universe,
-        increase their freedoms, and connect them to family, friends, and the rest of the world. It is through
-        greater global communication and understanding that I believe we can achieve a more peaceful world, and I
-        believe I can lend a hand through building software for the web.</p>
-    <p><strong>This is my purpose</strong> as a software engineer. The purpose of this website is to share my
-        knowledge and experience with others.</p>
-    <p><em>This page was inspired by <a href="https://slashpurpose.org">slashpurpose.org</a> from my friends at
-        <a href="https://fictivekin.com">Fictive Kin</a>.</em></p>
+    <article>
+        <h1>Purpose</h1>
+        <p><strong>I believe the Web has the power to change and shape the world</strong> we live in for good or evil.
+            It has the power to create new communities and new economies. It can destroy old barriers and topple regimes.
+            It brings us closer to our family and friends, and it makes the world a lot smaller by connecting us to
+            people and cultures we never knew existed. Yet, with all its good, it can also be used to tear people down,
+            to hurt, vilify, and bully them, to further perpetuate harmful ideologies like fascism, racism, and
+            classism.</p>
+        <p><strong>I choose to be an instrument for good</strong>, using my skills as a software engineer to build a better
+            world for my child, nieces and nephews, and their children. I want to build products that enrich the lives
+            of others, helping to grow their businesses, expand their knowledge and understanding of the universe,
+            increase their freedoms, and connect them to family, friends, and the rest of the world. It is through
+            greater global communication and understanding that I believe we can achieve a more peaceful world, and I
+            believe I can lend a hand through building software for the web.</p>
+        <p><strong>This is my purpose</strong> as a software engineer. The purpose of this website is to share my
+            knowledge and experience with others.</p>
+        <p><em>This page was inspired by <a href="https://slashpurpose.org">slashpurpose.org</a> from my friends at
+            <a href="https://fictivekin.com">Fictive Kin</a>.</em></p>
+    </article>
 {% endblock %}
