Add link relationship to Mastodon account for Monsterdon posts

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,6 +35,7 @@
         <link about="https://ben.ramsey.dev/#code" typeof="schema:SoftwareSourceCode" rel="license" type="application/rdf+xml" href="https://creativecommons.org/publicdomain/zero/1.0/rdf" title="Unless otherwise noted, the code examples appearing on this website are marked with CC0 1.0 Universal and dedicated to the public domain.">
 
         <link rel="canonical" href="{{ absolute_url(app.request.requesturi) }}">
+        <link rel="me" href="https://don.monster/@ramsey" title="Ben Ramsey posts about #Monsterdon">
 
         <meta property="og:site_name" content="Ben Ramsey">
         <meta property="og:title" content="{{ block('title') }}">
